<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bluetooth</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_bt_check">[ブルートゥース]確認</string>
    <string name="btn_bt_enabled">[ブルートゥース]有効化</string>
    <string name="btn_bt_pairedevices">[ペアデバイス]表示</string>
    <string name="btn_bt_search">[デバイス]検索</string>
    <string name="btn_bt_discovery">発見の有効化</string>

</resources>
