<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="jp.okinawa.idea.bluetooth.MainActivity" >

    <Button
        android:id="@+id/btn_bt_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_bt_check" />

    <Button
        android:id="@+id/btn_bt_enabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_bt_enabled" />

    <Button
        android:id="@+id/btn_bt_pairedevices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_bt_pairedevices" />

    <Button
        android:id="@+id/btn_bt_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_bt_search" />

    <Button
        android:id="@+id/btn_bt_discovery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_bt_discovery" />

    <ListView
        android:id="@+id/list_device"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

    </ListView>

</LinearLayout>
